--- a/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -239,8 +239,8 @@ RigNameMetadata=ControlRigWrapperObject_FRigControlElement.Transform.Current,Con
 RigElementKeyMetadata=ControlRigWrapperObject_FRigControlElement.Transform.Current,ControlRigWrapperObject_FRigControlElement.Transform.Offset,ControlRigWrapperObject_FRigControlElement.Transform.Initial,ControlRigWrapperObject_FRigControlElement.Shape.Shape Transform
 RigNameArrayMetadata=ControlRigWrapperObject_FRigControlElement.Transform.Current,ControlRigWrapperObject_FRigControlElement.Transform.Offset,ControlRigWrapperObject_FRigControlElement.Transform.Initial,ControlRigWrapperObject_FRigControlElement.Shape.Shape Transform
 AnimSequence=AnimSequence.Compression.CompressedTrackNamesGroup,AnimSequence.Compression.CompressedBoneErrorStats,AnimSequence.Compression.BoneGroup
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveRight.IA_MoveRight,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Turn.IA_Turn,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Run.IA_Run
-InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveRight.IA_MoveRight,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Turn.IA_Turn,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Run.IA_Run
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveRight.IA_MoveRight,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Turn.IA_Turn,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Run.IA_Run,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Jump.IA_Jump
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveRight.IA_MoveRight,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Turn.IA_Turn
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.BlendSamples_Samples
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 BP_Player_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
@@ -251,6 +251,152 @@ Character=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 ABP_xBot_C=
 PropertyWrapper=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 AnimGraphNode_BlendSpacePlayer=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+K2Node=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+EdGraphNode_Comment=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
+GeneralProjectSettings=InputSettings.Bindings.AxisMappings
+CryptoKeysSettings=InputSettings.Bindings.AxisMappings
+GameplayTagsSettings=InputSettings.Bindings.AxisMappings
+GameMapsSettings=InputSettings.Bindings.AxisMappings
+MoviePlayerSettings=InputSettings.Bindings.AxisMappings
+ProjectPackagingSettings=InputSettings.Bindings.AxisMappings
+HardwareTargetingSettings=InputSettings.Bindings.AxisMappings
+AssetManagerSettings=InputSettings.Bindings.AxisMappings
+AssetToolsSettings=InputSettings.Bindings.AxisMappings
+SlateRHIRendererSettings=InputSettings.Bindings.AxisMappings
+WidgetStateSettings=InputSettings.Bindings.AxisMappings
+ZenStreamingSettings=InputSettings.Bindings.AxisMappings
+AISystem=InputSettings.Bindings.AxisMappings
+AnimationSettings=InputSettings.Bindings.AxisMappings
+AnimationModifierSettings=InputSettings.Bindings.AxisMappings
+AudioSettings=InputSettings.Bindings.AxisMappings
+ChaosSolverSettings=InputSettings.Bindings.AxisMappings
+CineCameraSettings=InputSettings.Bindings.AxisMappings
+CollisionProfile=InputSettings.Bindings.AxisMappings
+ConsoleSettings=InputSettings.Bindings.AxisMappings
+ControlRigSettings=InputSettings.Bindings.AxisMappings
+CookerSettings=InputSettings.Bindings.AxisMappings
+CQTestSettings=InputSettings.Bindings.AxisMappings
+CrowdManager=InputSettings.Bindings.AxisMappings
+DataDrivenConsoleVariableSettings=InputSettings.Bindings.AxisMappings
+DebugCameraControllerSettings=InputSettings.Bindings.AxisMappings
+OptimusSettings=InputSettings.Bindings.AxisMappings
+EnhancedInputDeveloperSettings=InputSettings.Bindings.AxisMappings
+InputModifierSmoothDelta=InputSettings.Bindings.AxisMappings
+InputModifierDeadZone=InputSettings.Bindings.AxisMappings
+InputModifierResponseCurveExponential=InputSettings.Bindings.AxisMappings
+InputModifierFOVScaling=InputSettings.Bindings.AxisMappings
+InputTriggerDown=InputSettings.Bindings.AxisMappings
+InputTriggerPressed=InputSettings.Bindings.AxisMappings
+InputTriggerReleased=InputSettings.Bindings.AxisMappings
+InputTriggerHold=InputSettings.Bindings.AxisMappings
+InputTriggerHoldAndRelease=InputSettings.Bindings.AxisMappings
+InputTriggerTap=InputSettings.Bindings.AxisMappings
+InputTriggerRepeatedTap=InputSettings.Bindings.AxisMappings
+InputTriggerPulse=InputSettings.Bindings.AxisMappings
+EnhancedInputEditorProjectSettings=InputSettings.Bindings.AxisMappings
+MegascansMaterialParentSettings=InputSettings.Bindings.AxisMappings
+InterchangeFbxSettings=InputSettings.Bindings.AxisMappings
+GameplayDebuggerConfig=InputSettings.Bindings.AxisMappings
+GarbageCollectionSettings=InputSettings.Bindings.AxisMappings
+Engine=InputSettings.Bindings.AxisMappings
+GLTFPipelineSettings=InputSettings.Bindings.AxisMappings
+HierarchicalLODSettings=InputSettings.Bindings.AxisMappings
+InputSettings=InputSettings.Bindings.AxisMappings
+InterchangeProjectSettings=InputSettings.Bindings.AxisMappings
+LandscapeSettings=InputSettings.Bindings.AxisMappings
+LevelSequenceProjectSettings=InputSettings.Bindings.AxisMappings
+MassSettings=InputSettings.Bindings.AxisMappings
+MaterialXPipelineSettings=InputSettings.Bindings.AxisMappings
+MeshBudgetProjectSettings=InputSettings.Bindings.AxisMappings
+MeshDrawCommandStatsSettings=InputSettings.Bindings.AxisMappings
+RecastNavMesh=InputSettings.Bindings.AxisMappings
+NavigationSystemV1=InputSettings.Bindings.AxisMappings
+NetworkSettings=InputSettings.Bindings.AxisMappings
+ObjectMixerEditorSettings=InputSettings.Bindings.AxisMappings
+PhysicsSettings=InputSettings.Bindings.AxisMappings
+RendererSettings=InputSettings.Bindings.AxisMappings
+RendererOverrideSettings=InputSettings.Bindings.AxisMappings
+SlateSettings=InputSettings.Bindings.AxisMappings
+StateTreeSettings=InputSettings.Bindings.AxisMappings
+StreamingSettings=InputSettings.Bindings.AxisMappings
+TextureEncodingProjectSettings=InputSettings.Bindings.AxisMappings
+UsdProjectSettings=InputSettings.Bindings.AxisMappings
+UserInterfaceSettings=InputSettings.Bindings.AxisMappings
+VirtualTexturePoolConfig=InputSettings.Bindings.AxisMappings
+WorldPartitionSettings=InputSettings.Bindings.AxisMappings
+LevelEditor2DSettings=InputSettings.Bindings.AxisMappings
+EditorProjectAppearanceSettings=InputSettings.Bindings.AxisMappings
+EditorProjectAssetSettings=InputSettings.Bindings.AxisMappings
+BlueprintEditorProjectSettings=InputSettings.Bindings.AxisMappings
+ClassViewerProjectSettings=InputSettings.Bindings.AxisMappings
+ContentBrowserCollectionProjectSettings=InputSettings.Bindings.AxisMappings
+DataValidationSettings=InputSettings.Bindings.AxisMappings
+DDCProjectSettings=InputSettings.Bindings.AxisMappings
+DocumentationSettings=InputSettings.Bindings.AxisMappings
+EditorUtilityWidgetProjectSettings=InputSettings.Bindings.AxisMappings
+ProxyLODMeshSimplificationSettings=InputSettings.Bindings.AxisMappings
+LevelEditorProjectSettings=InputSettings.Bindings.AxisMappings
+LevelInstanceEditorSettings=InputSettings.Bindings.AxisMappings
+MovieSceneToolsProjectSettings=InputSettings.Bindings.AxisMappings
+MeshSimplificationSettings=InputSettings.Bindings.AxisMappings
+PaperImporterSettings=InputSettings.Bindings.AxisMappings
+EditorPerformanceProjectSettings=InputSettings.Bindings.AxisMappings
+RenderResourceViewerSettings=InputSettings.Bindings.AxisMappings
+SourceControlPreferences=InputSettings.Bindings.AxisMappings
+RigVMProjectSettings=InputSettings.Bindings.AxisMappings
+SkeletalMeshSimplificationSettings=InputSettings.Bindings.AxisMappings
+PlasticSourceControlProjectSettings=InputSettings.Bindings.AxisMappings
+StructViewerProjectSettings=InputSettings.Bindings.AxisMappings
+TextureImportSettings=InputSettings.Bindings.AxisMappings
+UMGEditorProjectSettings=InputSettings.Bindings.AxisMappings
+WorldBookmarkEditorSettings=InputSettings.Bindings.AxisMappings
+AndroidRuntimeSettings=InputSettings.Bindings.AxisMappings
+ShaderPlatformQualitySettings=InputSettings.Bindings.AxisMappings
+AndroidSDKSettings=InputSettings.Bindings.AxisMappings
+IOSRuntimeSettings=InputSettings.Bindings.AxisMappings
+LinuxTargetSettings=InputSettings.Bindings.AxisMappings
+MacTargetSettings=InputSettings.Bindings.AxisMappings
+WindowsTargetSettings=InputSettings.Bindings.AxisMappings
+XcodeProjectSettings=InputSettings.Bindings.AxisMappings
+AndroidFileServerRuntimeSettings=InputSettings.Bindings.AxisMappings
+AvfMediaSettings=InputSettings.Bindings.AxisMappings
+CameraCalibrationSettings=InputSettings.Bindings.AxisMappings
+CompositeCorePluginSettings=InputSettings.Bindings.AxisMappings
+DataflowSettings=InputSettings.Bindings.AxisMappings
+FractureModeSettings=InputSettings.Bindings.AxisMappings
+GameplayCamerasSettings=InputSettings.Bindings.AxisMappings
+GeometryCacheStreamerSettings=InputSettings.Bindings.AxisMappings
+GooglePADRuntimeSettings=InputSettings.Bindings.AxisMappings
+GroomPluginSettings=InputSettings.Bindings.AxisMappings
+ImgMediaSettings=InputSettings.Bindings.AxisMappings
+ToolPresetProjectSettings=InputSettings.Bindings.AxisMappings
+LevelSequenceEditorSettings=InputSettings.Bindings.AxisMappings
+LiveLinkSettings=InputSettings.Bindings.AxisMappings
+LiveLinkComponentSettings=InputSettings.Bindings.AxisMappings
+LiveLinkSequencerSettings=InputSettings.Bindings.AxisMappings
+MetaHumanSDKSettings=InputSettings.Bindings.AxisMappings
+MetaSoundSettings=InputSettings.Bindings.AxisMappings
+ModelingToolsEditorModeSettings=InputSettings.Bindings.AxisMappings
+ModelingComponentsSettings=InputSettings.Bindings.AxisMappings
+NiagaraSettings=InputSettings.Bindings.AxisMappings
+NiagaraEditorSettings=InputSettings.Bindings.AxisMappings
+NNEDenoiserSettings=InputSettings.Bindings.AxisMappings
+NNERuntimeORTSettings=InputSettings.Bindings.AxisMappings
+PaperRuntimeSettings=InputSettings.Bindings.AxisMappings
+PythonScriptPluginSettings=InputSettings.Bindings.AxisMappings
+RenderDocPluginSettings=InputSettings.Bindings.AxisMappings
+ResonanceAudioSettings=InputSettings.Bindings.AxisMappings
+TakeRecorderProjectSettings=InputSettings.Bindings.AxisMappings
+MovieSceneTakeSettings=InputSettings.Bindings.AxisMappings
+TakePresetSettings=InputSettings.Bindings.AxisMappings
+TakeRecorderMicrophoneAudioSourceSettings=InputSettings.Bindings.AxisMappings
+TakeRecorderMicrophoneAudioManager=InputSettings.Bindings.AxisMappings
+MovieSceneAnimationTrackRecorderEditorSettings=InputSettings.Bindings.AxisMappings
+TakeRecorderWorldSourceSettings=InputSettings.Bindings.AxisMappings
+TcpMessagingSettings=InputSettings.Bindings.AxisMappings
+TemplateSequenceEditorSettings=InputSettings.Bindings.AxisMappings
+UdpMessagingSettings=InputSettings.Bindings.AxisMappings
+WmfMediaSettings=InputSettings.Bindings.AxisMappings
 
 [/Script/ClothPainter.ClothPainterSettings]
 ViewMin=0.000000
@@ -265,6 +411,7 @@ LastLevel=/Game/BaseMap
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=GenericAssetEditor
@@ -283,11 +430,6 @@ RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=
-OpenAssetsAtExit=/Game/ThirdPersonCharacter/Input/IA_Run.IA_Run
-OpenAssetsAtExit=/Game/ThirdPersonCharacter/Input/IM_ThirdPerson.IM_ThirdPerson
-OpenAssetsAtExit=/Game/ThirdPersonCharacter/Blueprints/BP_Player.BP_Player
-OpenAssetsAtExit=/Game/ThirdPersonCharacter/Blueprints/ABP_xBot.ABP_xBot
-OpenAssetsAtExit=/Game/ThirdPersonCharacter/Input/IA_Jump.IA_Jump
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -315,7 +457,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize2=1
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPersonCharacter/Animation
+ContentBrowserTab1.SelectedPaths=/Game/Animations
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -1644,6 +1786,20 @@ AnimGraphNode_StateResult.Tag=True
 AnimGraphNode_StateResult.Bindings=True
 AnimStateNode.GraphNodeDetail=True
 AnimStateNode.Animation State=True
+InterchangeFbxSettings.FBX =True
+AnimGraphNode_SequencePlayer.Sync=True
+AnimGraphNode_SequencePlayer.Functions=True
+AnimGraphNode_SequencePlayer.Relevancy=True
+AnimGraphNode_SequencePlayer.Settings=True
+AnimGraphNode_SequencePlayer.Tag=True
+AnimGraphNode_SequencePlayer.Bindings=True
+AnimGraphNode_BlendListByBool.Functions=True
+AnimGraphNode_BlendListByBool.Runtime=True
+AnimGraphNode_BlendListByBool.Tag=True
+AnimGraphNode_BlendListByBool.Config=True
+AnimGraphNode_BlendListByBool.BlendType=True
+AnimGraphNode_BlendListByBool.Option=True
+AnimGraphNode_BlendListByBool.Bindings=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1669,29 +1825,30 @@ RecentlyPlaced=/Script/CinematicCamera.CameraRig_Crane;
 InstalledPlugins=GeneSplicer
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPersonCharacter/Animation/BS1D_Jump
+MRUItem0=/Game/Animations/Backwards_Jog
 MRUItem1=/Game/ThirdPersonCharacter/Animation/BS1D_IdleRun
-MRUItem2=/Game/ThirdPersonCharacter/Input/IA_Jump
-MRUItem3=/Game/Animations/Walking
-MRUItem4=/Game/ThirdPersonCharacter/Blueprints/ABP_xBot
-MRUItem5=/Game/ThirdPersonCharacter/Blueprints/BP_Player
-MRUItem6=/Game/ThirdPersonCharacter/Input/IM_ThirdPerson
-MRUItem7=/Game/ThirdPersonCharacter/Input/IA_Run
-MRUItem8=/Game/Characters/xBot_Skeleton
-MRUItem9=/Game/Characters/xBot
-MRUItem10=/Game/Animations/Jogging
-MRUItem11=/Game/ThirdPersonCharacter/Input/IA_Turn
-MRUItem12=/Game/ThirdPersonCharacter/Input/IA_MoveRight
-MRUItem13=/Game/ThirdPersonCharacter/Input/IA_MoveForward
-MRUItem14=/Game/Characters/SK_GirlBody
-MRUItem15=/Game/Characters/SKM_GirlBody
-MRUItem16=/Game/Characters/SM_GirlBody
-MRUItem17=/Game/BaseMap
+MRUItem2=/Game/ThirdPersonCharacter/Animation/BS1D_Jump
+MRUItem3=/Game/ThirdPersonCharacter/Input/IA_Jump
+MRUItem4=/Game/Animations/Walking
+MRUItem5=/Game/ThirdPersonCharacter/Blueprints/ABP_xBot
+MRUItem6=/Game/ThirdPersonCharacter/Blueprints/BP_Player
+MRUItem7=/Game/ThirdPersonCharacter/Input/IM_ThirdPerson
+MRUItem8=/Game/ThirdPersonCharacter/Input/IA_Run
+MRUItem9=/Game/Characters/xBot_Skeleton
+MRUItem10=/Game/Characters/xBot
+MRUItem11=/Game/Animations/Jogging
+MRUItem12=/Game/ThirdPersonCharacter/Input/IA_Turn
+MRUItem13=/Game/ThirdPersonCharacter/Input/IA_MoveRight
+MRUItem14=/Game/ThirdPersonCharacter/Input/IA_MoveForward
+MRUItem15=/Game/Characters/SK_GirlBody
+MRUItem16=/Game/Characters/SKM_GirlBody
+MRUItem17=/Game/Characters/SM_GirlBody
+MRUItem18=/Game/BaseMap
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-DataAsset="\"Object.SkeletalMeshes\" "
-Object=
+DataAsset=
+Object="\"Object.Animation.PlatformTargetFrameRate\" "
 MassSettings="\"Object.Mass\" "
 DeveloperSettings=
 SkeletalMesh="\"Object.LevelOfDetail.LODInfo.LODInfo[0].BonesToRemove.BonesToRemove[1]\" "
@@ -1707,16 +1864,17 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 InputMappingContext="\"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[3].Modifiers\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[6]\" "
 AnimSequence="\"Object.Animation.PlatformTargetFrameRate\" "
 AnimSequenceBase="\"Object.Animation.PlatformTargetFrameRate\" "
-AnimationAsset="\"Object.BlendParametersTest.BlendParameters.BlendParameters[0]\" \"Object.BlendParametersTest.BlendParameters.BlendParameters[1]\" "
-BP_Player_C="\"Object.CharacterMovement\" "
-Character="\"Object.CharacterMovement\" "
-Pawn="\"Object.CharacterMovement\" "
+AnimationAsset="\"Object.Animation.PlatformTargetFrameRate\" "
+BP_Player_C="\"Object.CharacterMovement\" \"Object.CharacterMovement.Object.NavAgentProps\" "
+Character="\"Object.CharacterMovement\" \"Object.CharacterMovement.Object.NavAgentProps\" "
+Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement.Object.NavAgentProps\" "
 BlendSpace="\"Object.BlendParametersTest.BlendParameters.BlendParameters[0]\" \"Object.BlendParametersTest.BlendParameters.BlendParameters[1]\" "
-CharacterMovementComponent="\"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
-PawnMovementComponent="\"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
-NavMovementComponent="\"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
-MovementComponent="\"Object.NavMovement.NavMovementProperties\" \"Object.NavMovement.NavAgentProps\" "
-ActorComponent=
+CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
+MovementComponent="\"Object.NavMovement.NavAgentProps\" "
+ActorComponent="\"Object.NavMovement.NavAgentProps\" "
+InputSettings=
 
 [/Script/ControlRigEditor.ControlRigEditModeSettings]
 bDisplayHierarchy=False
@@ -1759,6 +1917,9 @@ LastInViewportTweenWidgetLocation=(X=514.000000,Y=552.000000)
 /Game/Characters/xBot_Skeleton.xBot_Skeleton=1
 /Game/Characters/xBot.xBot=1
 /Game/Animations/Jumping.Jumping=1
+/Game/ThirdPersonCharacter/Input/IA_Run.IA_Run=1
+/Game/ThirdPersonCharacter/Input/IA_Jump.IA_Jump=1
+/Game/Animations/Backwards_Walk.Backwards_Walk=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1783,8 +1944,8 @@ bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
 bShowPanelContextMenuForIncompatibleConnections=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -3429,7 +3590,9 @@ GeneralProjectSettings=True
 GameMapsSettings=True
 AnimationAuthoringSettings=True
 EditorPerformanceSettings=True
+InputSettings=True
 
 [DetailCategoriesAdvanced]
 AnimSequence.Animation=True
+InputSettings.Bindings=False
 
