add dancing emote

--- a/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Animation1/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -238,9 +238,9 @@ ControlRigWrapperObject_FRigControlElement=ControlRigWrapperObject_FRigControlEl
 RigNameMetadata=ControlRigWrapperObject_FRigControlElement.Transform.Current,ControlRigWrapperObject_FRigControlElement.Transform.Offset,ControlRigWrapperObject_FRigControlElement.Transform.Initial,ControlRigWrapperObject_FRigControlElement.Shape.Shape Transform
 RigElementKeyMetadata=ControlRigWrapperObject_FRigControlElement.Transform.Current,ControlRigWrapperObject_FRigControlElement.Transform.Offset,ControlRigWrapperObject_FRigControlElement.Transform.Initial,ControlRigWrapperObject_FRigControlElement.Shape.Shape Transform
 RigNameArrayMetadata=ControlRigWrapperObject_FRigControlElement.Transform.Current,ControlRigWrapperObject_FRigControlElement.Transform.Offset,ControlRigWrapperObject_FRigControlElement.Transform.Initial,ControlRigWrapperObject_FRigControlElement.Shape.Shape Transform
-AnimSequence=AnimSequence.Compression.CompressedTrackNamesGroup,AnimSequence.Compression.CompressedBoneErrorStats,AnimSequence.Compression.BoneGroup
+AnimSequence=AnimSequence.Compression.CompressedBoneErrorStats,AnimSequence.Compression.BoneGroup
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveRight.IA_MoveRight,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Turn.IA_Turn,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Run.IA_Run,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Jump.IA_Jump
-InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveRight.IA_MoveRight,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Turn.IA_Turn
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveRight.IA_MoveRight,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_MoveForward.IA_MoveForward,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Turn.IA_Turn,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Run.IA_Run,InputMappingContext.Mappings.ActionMappings./Game/ThirdPersonCharacter/Input/IA_Jump.IA_Jump
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis,BlendSpace.Axis Settings.Vertical Axis,BlendSpace.BlendSamples.BlendSamples_Samples
 K2Node_VariableGet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 BP_Player_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
@@ -397,6 +397,7 @@ TcpMessagingSettings=InputSettings.Bindings.AxisMappings
 TemplateSequenceEditorSettings=InputSettings.Bindings.AxisMappings
 UdpMessagingSettings=InputSettings.Bindings.AxisMappings
 WmfMediaSettings=InputSettings.Bindings.AxisMappings
+SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
 
 [/Script/ClothPainter.ClothPainterSettings]
 ViewMin=0.000000
@@ -413,12 +414,15 @@ CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=AnimationEditor
-RecentAssetEditors=AnimationBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=AnimationBlueprintEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=AnimationEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=AnimationEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
@@ -430,6 +434,10 @@ RecentAssetEditors=SkeletonEditor
 RecentAssetEditors=SkeletalMeshEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=
+OpenAssetsAtExit=/Game/ThirdPersonCharacter/Blueprints/ABP_xBot.ABP_xBot
+OpenAssetsAtExit=/Game/ThirdPersonCharacter/Input/IA_Emote.IA_Emote
+OpenAssetsAtExit=/Game/ThirdPersonCharacter/Input/IM_ThirdPerson.IM_ThirdPerson
+OpenAssetsAtExit=/Game/ThirdPersonCharacter/Blueprints/BP_Player.BP_Player
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -821,6 +829,7 @@ InputTriggerPulse.Trigger Settings=True
 EnhancedInputDeveloperSettings.Trigger Default Values=True
 EnhancedInputEditorProjectSettings.Default=True
 MegascansMaterialParentSettings.Parent Materials=True
+InterchangeFbxSettings.FBX=True
 InterchangeFbxSettings.FBX=True
 GameplayDebuggerConfig.Input=True
 GameplayDebuggerConfig.Display=True
@@ -1559,9 +1568,10 @@ LogVisualizerSettings.VisualLogger=True
 InterchangeGenericAssetsPipeline.Conflicts=True
 AnimSequence.Animation=True
 AnimSequence.Animation Model=True
-AnimSequence.Compression=True
-AnimSequence.AdditiveSettings=True
+AnimSequence.Compression=False
+AnimSequence.AdditiveSettings=False
 AnimSequence.RootMotion=True
+AnimSequence.Interchange=True
 AnimSequence.Interchange=True
 AnimSequence.Interchange=True
 AnimSequence.Interchange=True
@@ -1759,7 +1769,6 @@ ABP_xBot_C.Default=True
 AnimGraphNode_Root.Functions=True
 AnimGraphNode_Root.Tag=True
 AnimGraphNode_Root.Bindings=True
-AnimSequence.Interchange =True
 AnimGraphNode_BlendSpacePlayer.Sync=True
 AnimGraphNode_BlendSpacePlayer.Functions=True
 AnimGraphNode_BlendSpacePlayer.Relevancy=True
@@ -1786,7 +1795,6 @@ AnimGraphNode_StateResult.Tag=True
 AnimGraphNode_StateResult.Bindings=True
 AnimStateNode.GraphNodeDetail=True
 AnimStateNode.Animation State=True
-InterchangeFbxSettings.FBX =True
 AnimGraphNode_SequencePlayer.Sync=True
 AnimGraphNode_SequencePlayer.Functions=True
 AnimGraphNode_SequencePlayer.Relevancy=True
@@ -1800,6 +1808,20 @@ AnimGraphNode_BlendListByBool.Config=True
 AnimGraphNode_BlendListByBool.BlendType=True
 AnimGraphNode_BlendListByBool.Option=True
 AnimGraphNode_BlendListByBool.Bindings=True
+AnimSequence.Interchange =False
+AnimGraphNode_Slot.Settings=True
+AnimGraphNode_Slot.Functions=True
+AnimGraphNode_Slot.Tag=True
+AnimGraphNode_Slot.Bindings=True
+AnimMontage.BlendOption=True
+AnimMontage.Animation=True
+AnimMontage.Animation Model=True
+AnimMontage.SyncGroup=True
+AnimMontage.AdditiveSettings=True
+AnimMontage.TimeStretchCurve=True
+AnimMontage.AnimationComposite=True
+AnimMontage.MetaData=True
+AnimMontage.Thumbnail=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1825,30 +1847,33 @@ RecentlyPlaced=/Script/CinematicCamera.CameraRig_Crane;
 InstalledPlugins=GeneSplicer
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Animations/Backwards_Jog
-MRUItem1=/Game/ThirdPersonCharacter/Animation/BS1D_IdleRun
-MRUItem2=/Game/ThirdPersonCharacter/Animation/BS1D_Jump
-MRUItem3=/Game/ThirdPersonCharacter/Input/IA_Jump
-MRUItem4=/Game/Animations/Walking
+MRUItem0=/Game/Animations/AM_HipHopDance
+MRUItem1=/Game/Animations/Emote_HipHopDance
+MRUItem2=/Game/ThirdPersonCharacter/Blueprints/BP_Player
+MRUItem3=/Game/ThirdPersonCharacter/Input/IM_ThirdPerson
+MRUItem4=/Game/ThirdPersonCharacter/Input/IA_Emote
 MRUItem5=/Game/ThirdPersonCharacter/Blueprints/ABP_xBot
-MRUItem6=/Game/ThirdPersonCharacter/Blueprints/BP_Player
-MRUItem7=/Game/ThirdPersonCharacter/Input/IM_ThirdPerson
-MRUItem8=/Game/ThirdPersonCharacter/Input/IA_Run
-MRUItem9=/Game/Characters/xBot_Skeleton
-MRUItem10=/Game/Characters/xBot
-MRUItem11=/Game/Animations/Jogging
-MRUItem12=/Game/ThirdPersonCharacter/Input/IA_Turn
-MRUItem13=/Game/ThirdPersonCharacter/Input/IA_MoveRight
-MRUItem14=/Game/ThirdPersonCharacter/Input/IA_MoveForward
-MRUItem15=/Game/Characters/SK_GirlBody
-MRUItem16=/Game/Characters/SKM_GirlBody
-MRUItem17=/Game/Characters/SM_GirlBody
-MRUItem18=/Game/BaseMap
+MRUItem6=/Game/Animations/Backwards_Jog
+MRUItem7=/Game/ThirdPersonCharacter/Animation/BS1D_IdleRun
+MRUItem8=/Game/ThirdPersonCharacter/Animation/BS1D_Jump
+MRUItem9=/Game/ThirdPersonCharacter/Input/IA_Jump
+MRUItem10=/Game/Animations/Walking
+MRUItem11=/Game/ThirdPersonCharacter/Input/IA_Run
+MRUItem12=/Game/Characters/xBot_Skeleton
+MRUItem13=/Game/Characters/xBot
+MRUItem14=/Game/Animations/Jogging
+MRUItem15=/Game/ThirdPersonCharacter/Input/IA_Turn
+MRUItem16=/Game/ThirdPersonCharacter/Input/IA_MoveRight
+MRUItem17=/Game/ThirdPersonCharacter/Input/IA_MoveForward
+MRUItem18=/Game/Characters/SK_GirlBody
+MRUItem19=/Game/Characters/SKM_GirlBody
+MRUItem20=/Game/Characters/SM_GirlBody
+MRUItem21=/Game/BaseMap
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object.SkeletalMeshes\" "
-DataAsset=
-Object="\"Object.Animation.PlatformTargetFrameRate\" "
+DataAsset="\"Object.SkeletalMeshes\" "
+Object=
 MassSettings="\"Object.Mass\" "
 DeveloperSettings=
 SkeletalMesh="\"Object.LevelOfDetail.LODInfo.LODInfo[0].BonesToRemove.BonesToRemove[1]\" "
@@ -1861,19 +1886,19 @@ BlueprintCore=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoSave\" \"Object.Blueprints\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-InputMappingContext="\"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[3].Modifiers\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[6]\" "
+InputMappingContext="\"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[3].Modifiers\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[7]\" "
 AnimSequence="\"Object.Animation.PlatformTargetFrameRate\" "
-AnimSequenceBase="\"Object.Animation.PlatformTargetFrameRate\" "
-AnimationAsset="\"Object.Animation.PlatformTargetFrameRate\" "
-BP_Player_C="\"Object.CharacterMovement\" \"Object.CharacterMovement.Object.NavAgentProps\" "
-Character="\"Object.CharacterMovement\" \"Object.CharacterMovement.Object.NavAgentProps\" "
-Pawn="\"Object.CharacterMovement\" \"Object.CharacterMovement.Object.NavAgentProps\" "
+AnimSequenceBase=
+AnimationAsset=
+BP_Player_C=
+Character=
+Pawn=
 BlendSpace="\"Object.BlendParametersTest.BlendParameters.BlendParameters[0]\" \"Object.BlendParametersTest.BlendParameters.BlendParameters[1]\" "
 CharacterMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 PawnMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 NavMovementComponent="\"Object.NavMovement.NavAgentProps\" "
 MovementComponent="\"Object.NavMovement.NavAgentProps\" "
-ActorComponent="\"Object.NavMovement.NavAgentProps\" "
+ActorComponent=
 InputSettings=
 
 [/Script/ControlRigEditor.ControlRigEditModeSettings]
@@ -3566,8 +3591,8 @@ AssetName=
 Assets_LastSelectedPipeline=InterchangeGenericAssetsPipeline
 
 [InterchangeImportDialogOptions]
-ImportContentDialogSizeX=1000
-ImportContentDialogSizeY=650
+ImportContentDialogSizeX=1002
+ImportContentDialogSizeY=658.4000244140625
 
 [/Script/SkeletalMeshModelingTools.StaticMeshToSkeletalMeshConvertOptions]
 DestinationPath=(Path="/Game/Characters")
